--- a/README.html
+++ b/README.html
@@ -357,6 +357,8 @@ display: none;
 <ul>
 <li><a href="https://robertwwalker.github.io/WA23/LLM">Day 1</a></li>
 <li><a href="https://robertwwalker.github.io/WA23/AI">Day 2</a></li>
+<li><a href="https://robertwwalker.github.io/WA23/OtherAI">Day
+3</a></li>
 </ul>
 </div>
 
